# SDL_3D

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  Makefile  README.md
.github/workflows/: ci.yml  clang-format.yml  profile.yml
benchmarks/: CMakeLists.txt  bench_render.c
cmake/: EmbedShaders.cmake  SDL3DAssets.cmake  SDL3DCompilerWarnings.cmake  SDL3DConfig.cmake.in  SDL3DEmbedAssetPack.cmake  SDL3DSanitizers.cmake
demos/: CMakeLists.txt  doom_tribute.c  showcase.c  showcase_1080p.c
demos/assets/: PROVENANCE  doom_level.gltf
demos/bathroom/: CMakeLists.txt  README.md  main.c
demos/black_dragon/: CMakeLists.txt  README.md  main.c
demos/doom_level/: CMakeLists.txt  README.md  backend.c  backend.h  doom_doors.c  doom_doors.h  entities.c  entities.h  hazard_effects.c  hazard_effects.h  level_data.c  level_data.h  main.c  player.c  player.h  renderer.c  renderer.h  surveillance.c  surveillance.h
demos/doom_level/data/: robot.sprite.json
demos/doom_tribute/: CMakeLists.txt  README.md  main.c
demos/font_showcase/: CMakeLists.txt  main.c
demos/gui_demo/: CMakeLists.txt  main.c
demos/pong/: CMakeLists.txt  main.c  pong_rules.c  pong_rules.h
demos/pong/data/: pong.game.json
demos/pong/data/audio/music/: README.txt
demos/pong/data/scenes/: multiplayer.scene.json  multiplayer_direct_connect.scene.json  multiplayer_discovery.scene.json  multiplayer_join.scene.json  multiplayer_lan.scene.json  multiplayer_lobby.scene.json  options.scene.json  options_audio.scene.json  options_display.scene.json  options_gamepad.scene.json  options_keyboard.scene.json  play.scene.json  splash.scene.json  title.scene.json
demos/pong/data/scripts/: pong.lua
demos/pong/data/shaders/: splash_logo_melt.frag.glsl
demos/profile_viewer/: CMakeLists.txt  README.md  main.c
demos/shiba/: CMakeLists.txt  README.md  main.c
demos/showcase/: CMakeLists.txt  README.md
demos/showcase_1080p/: CMakeLists.txt  README.md  main.c
demos/ui_editor/: CMakeLists.txt  main.c
docs/: assets.md  data-game-runtime.md  data-only-games.md  error-handling.md  game-data-json.md  game-data-lua.md  game-data-model.md  issue-renderer-architecture-roadmap.md  logging.md  pong-c-audit.md  pong-template-checklist.md  standard-options.md  storage.md  testing.md
include/sdl3d/: action.h  actor_controller.h  actor_registry.h  animation.h  app.h  asset.h  audio.h  camera.h  collision.h  data_game.h  door.h  drawing3d.h  effects.h  font.h  fps_mover.h  game.h  game_data.h  game_presentation.h  image.h  input.h  level.h  lighting.h  logic.h  math.h  model.h  network.h  network_replication.h  properties.h  render_context.h  scene.h  script.h  sdl3d.h  shapes.h  signal_bus.h  sprite_actor.h  sprite_asset.h  storage.h  teleporter.h  texture.h  time.h  (+5 more)
media/: README.md
media/audio/: README.md
media/bathroom/: LICENSE.md  scene.gltf
media/black_dragon/: LICENSE.md
media/fonts/: LICENSE.md
media/shiba/: LICENSE.md
media/sprites/: enemy.aseprite  health-pack.aseprite
media/sprites/skeletal_robot/: metadata.json
models/: README.md
models/simple_robot/: LICENSE.md
scripts/: check_clang_format.sh  run_android_tests.sh  run_ios_tests.sh
shaders/: copy_frag.glsl  fullscreen_vert.glsl  pbr_frag.glsl  pbr_vert.glsl  shadow_depth_frag.glsl  shadow_depth_vert.glsl  unlit_frag.glsl  unlit_vert.glsl
src/: action.c  actor_controller.c  actor_registry.c  animation.c  app.c  asset.c  audio.c  backend.h  camera.c  collision.c  data_game.c  door.c  drawing3d.c  effects.c  fbx_loader.c  font.c  fps_mover.c  game.c  game_data.c  game_data_standard_options.c  game_data_standard_options.h  game_data_validation.c  game_data_validation.h  game_presentation.c  gl_backend.c  gl_backend.h  gl_backend_adapter.c  gl_funcs.h  gl_renderer.c  gl_renderer.h  gl_shaders.h  gltf_loader.c  image.c  input.c  level.c  lighting.c  lighting_internal.h  logic.c  math.c  model.c  (+32 more)
tests/: CMakeLists.txt  android_main.cpp  ios_main.cpp  test_action.cpp  test_actor_controller.cpp  test_actor_registry.cpp  test_animation.cpp  test_api.cpp  test_app.cpp  test_asset.cpp  test_audio.cpp  test_collision.cpp  test_crypto.cpp  test_doom_backend.cpp  test_doom_surveillance.cpp  test_door.cpp  test_drawing3d.cpp  test_effects.cpp  test_font.cpp  test_fps_mover.cpp  test_game.cpp  test_game_data.cpp  test_game_data_json.cpp  test_game_session.cpp  test_gl_renderer.cpp  test_greet.c  test_greet.cpp  test_image.cpp  test_input.cpp  test_level.cpp  test_lighting.cpp  test_logic.cpp  test_m3_loaders.cpp  test_math.cpp  test_network.cpp  test_network_replication.cpp  test_obj_loader.cpp  test_parity.cpp  test_pong_multiplayer.cpp  test_pong_rules.cpp  (+20 more)
tests/android/app/: build.gradle
tests/android/app/src/main/: AndroidManifest.xml
tests/android/app/src/main/java/com/sdl3d/tests/: TestActivity.java
tests/android/app/src/main/res/values/: strings.xml
tests/assets/game_data/: bad_reference.game.json  dependency_cycle.game.json  missing_dependency.game.json  missing_file.game.json  missing_function.game.json  module_success.game.json  no_table.game.json  sprite_asset_fixture.game.json  standard_options_minimal.game.json  warning_unsupported_component.game.json
tests/assets/game_data/scenes/: standard_options_title.scene.json
tests/assets/game_data/scripts/: rules.lua  shared.lua
tests/assets/models/box_glb/: PROVENANCE
tests/assets/models/cube_fbx/: PROVENANCE
tests/assets/models/cube_obj/: PROVENANCE  cube.mtl
tests/ios/: Info.plist.in
tools/: sdl3d_pack.c  sdl3d_runner.c
